# fractal-repositories

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  publish.yml
fractal_repositories/: __init__.py  exceptions.py
fractal_repositories/contrib/django/: __init__.py  mixins.py
fractal_repositories/contrib/duckdb/: __init__.py  mixins.py
fractal_repositories/contrib/gcp/cloudstorage/: mixins.py
fractal_repositories/contrib/gcp/firestore/: __init__.py  mixins.py
fractal_repositories/contrib/mongo/: __init__.py  mixins.py
fractal_repositories/contrib/postgresql/: __init__.py  mixins.py
fractal_repositories/contrib/sqlalchemy/: mixins.py
fractal_repositories/core/: entity.py  repositories.py
fractal_repositories/mixins/: external_data_inmemory_repository_mixin.py  file_repository_mixin.py  filter_repository_mixin.py  inmemory_repository_mixin.py  sqlite_repository_mixin.py
fractal_repositories/utils/: cached_repository.py  distributed_read_repository.py  field_permissions_repository.py  memoized_repository.py
tests/: conftest.py
tests/contrib/: test_cloudstorage.py  test_django.py  test_duckdb.py  test_firestore.py  test_mongo.py  test_postgresql.py  test_sqlalchemy.py
tests/core/: test_models.py  test_repositories.py
tests/fixtures/: __init__.py  cloudstorage.py  duckdb.py  firestore.py  mongo.py  postgresql.py  repositories.py  sqlalchemy.py  utils.py
tests/fixtures/django/: __init__.py  models.py
tests/mixins/: test_file_file_repository_mixin.py  test_file_repository_mixin.py  test_filter_repository_mixin.py  test_inmemory_file_repository_mixin.py  test_inmemory_repository_mixin.py  test_sqlite_repository_mixin.py
tests/utils/: test_cached_repository.py  test_distributed_read_repository.py  test_field_permissions_repository.py  test_json_encoder.py  test_memoized_repository.py
