[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fractal-repositories"
version = "1.3.1"
description = "Fractal Repositories is an implementation of the repository pattern of Domain Driven Design (DDD) for building SOLID logic for your Python applications."
readme = "README.md"
authors = [
    { name = "Douwe van der Meij", email = "douwe@karibu-online.nl" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
keywords = ["database", "query", "projection", "aggregation", "sql", "mongodb", "firestore", "elasticsearch"]

dependencies = [
    "fractal-specifications",
]

[project.optional-dependencies]
django = ["django>=5.2.7"]
duckdb = ["duckdb>=0.9.0"]
firestore = ["google-cloud-firestore>=2.0.0"]
mongo = ["pymongo>=4.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
sqlalchemy = ["sqlalchemy>=2.0"]
dev = [
    "django>=5.2.7",
    "duckdb>=0.9.0",
    "pytest<8",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.13.2",
    "sqlalchemy>=2.0",
    "mock-firestore>=0.11.0",
    "cloud-storage-mocker>=0.3.4",
    "pymongo>=4.0.0",
    "mongomock>=4.3.0",
    "pydantic>=2.12.3",
    "pytest-mock>=3.15.1",
    "firebase-admin>=7.1.0",
    "psycopg2-binary>=2.9.0",
]
all = [
    "django>=5.2.7",
    "duckdb>=0.9.0",
    "google-cloud-firestore>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.0.0",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/douwevandermeij/fractal-repositories"
Documentation = "https://github.com/douwevandermeij/fractal-repositories#readme"
Repository = "https://github.com/douwevandermeij/fractal-repositories"
Issues = "https://github.com/douwevandermeij/fractal-repositories/issues"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fractal_repositories --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "def __repr__",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "I"]
ignore = [
    "E501",  # Line too long (let Black handle it)
    "C901",  # Ignore complexity warnings
    "F403",  # Allow star imports in __init__.py files
    "F405",  # Allow undefined exports from star imports
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
strict_optional = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "fractal_repositories.builders.*"
ignore_errors = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
